# wepy

./: .envrc  .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  ruff.toml
info/examples/Lennard_Jones_Pair/source/: compute_distance_observable.py  sim_maker_run.py  state_network.py  trivial_run.py  we.py
info/examples/Lysozyme/source/: we.py
info/examples/RandomWalk/: tasks.py
info/examples/RandomWalk/source/: rw_conventional.py  rw_revo.py  rw_wexplore.py
info/tutorials/extended_test_drive/: tasks.py
info/tutorials/seh_system_prep/: tasks.py
sphinx/: conf.py
src/: wepy_test_drive.py
src/pytest_wepy/: lennard_jones_pair.py  test_hdf5.py  test_hdf5_analysis.py
src/wepy/: __init__.py  hdf5.py  sim_manager.py  walker.py
src/wepy/analysis/: __init__.py  contig_tree.py  distributed.py  network.py  parents.py  profiles.py  rates.py  transitions.py
src/wepy/analysis/network_layouts/: layout_graph.py  tree.py
src/wepy/boundary_conditions/: __init__.py  boundary.py  randomwalk.py  receptor.py  unbinding.py
src/wepy/orchestration/: cli.py  configuration.py  orchestrator.py
src/wepy/reporter/: dashboard.py  hdf5.py  openmm.py  reporter.py  restree.py  walker.py
src/wepy/reporter/receptor/: dashboard.py
src/wepy/reporter/revo/: dashboard.py
src/wepy/reporter/wexplore/: dashboard.py
src/wepy/resampling/decisions/: clone_merge.py  decision.py
src/wepy/resampling/distances/: distance.py  randomwalk.py  receptor.py
src/wepy/resampling/resamplers/: clone_merge.py  resampler.py  revo.py  wexplore.py
src/wepy/runners/: openmm.py  randomwalk.py  runner.py
src/wepy/util/: __init__.py  json_top.py  kv.py  mdtraj.py  util.py
src/wepy/work_mapper/: mapper.py  task_mapper.py  worker.py
src/wepy_tools/sim_makers/openmm/: __init__.py  lennard_jones.py  lysozyme.py  sim_maker.py
src/wepy_tools/systems/: receptor.py
tests/benchmarks/: test_mappers.py
tests/docs/test_examples/: test_Lennard_Jones_Pair.py
tests/integration/: test_lj_combinations.py  test_lj_fixture.py
tests/unit/test_work_mapper/: test_mapper.py
(+3 files in other folders)
