
[project]
name = "wepy"
description = "Weighted Ensemble Framework"
readme = { "file" = "README.org", "content-type" = "text/plain" }
license = "MIT"
requires-python = ">=3.11"

authors = [
  { name = "Samuel Lotz", email = "samuel.lotz@salotz.info" },
  { name = "Alex Dickson", email = "alexrd@msu.edu" },
  { name = "Tom Dixon" },
  { name = "Robert Hall" },
  { name = "Nicole Roussey" },
]
version = "1.1.0"

classifiers = [
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "numpy",
  "h5py>=3",
  "networkx",
  "pandas",
  "dill",
  "click",
  "scipy",
  "geomm",
  "tabulate",
  "jinja2",
  "pint",
  "multiprocessing_logging",
]

[project.optional-dependencies]

md = [
  "mdtraj",
  "openmm_systems==0.0.0",
  # NOTE: you should just install this yourself to get it the compute
  # runtime you need.
  "openmm",
]

distributed = [
  "dask[bag]",
]

prometheus = [
  "prometheus_client",
  "pympler",
]

graphics = [
  "matplotlib",
  # NOTE: pillow only needed for matplotlib but it needs to be above this
  # version for security reasons. If matplotlib also adds these constraints this
  # can be removed
  "pillow>=10.0.1",
]


[project.urls]

Documentation = "https://adicksonlab.github.io/wepy/index.html"
Source = "https://github.com/ADicksonLab/wepy"
Issues = "https://github.com/ADicksonLab/wepy/issues"

[project.scripts]

wepy = "wepy.__main__:cli"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]

dev = [
  # testing
  "pytest",
  "coverage",
  "pytest-cov",
  # qa
  "black",
  "isort",
  "ruff",
  "interrogate",
  # typechecking
  "mypy",
  # interactive
  "ipython",
  "pdbpp",
  # docs
  "sphinx",
  "sphinxcontrib-napoleon",
  "sphinxcontrib-newsfeed",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-newsfeed",
  "nbsphinx",
  "notebook",
]

[tool.interrogate]

fail-under = 100
verbose = 2

[tool.hatch.version]
path = "src/wepy/__about__.py"
